@@ -28,6 +28,7 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
    * scan
    * scan-multiple, scan-concat
    * dogenerator
+ * mlib: added dovector
 
  * fixed backquote expansion:
    e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
